# umbra

./: .gitignore  Makefile  TODO  settings.sh  tst
host/bare_metal_arm/: Makefile  tst
host/bare_metal_arm/linker/: host.ld  linker.ld  memory.ld
host/bare_metal_arm/src/: main.c  startup.s
linker/: STM32L552ZETXQ.ld
src/architecture_drivers/arm/: Cargo.toml
src/architecture_drivers/arm/src/: lib.rs  sau.rs
src/common/memory_layout/src/: lib.rs
src/common/peripheral_regs/src/: lib.rs
src/hardware/architecture/arm/: Cargo.toml
src/hardware/platform/stm32l552/boot/: Cargo.toml  Makefile
src/hardware/platform/stm32l552/boot/.cargo/: config.toml
src/hardware/platform/stm32l552/boot/src/: main.rs  non_secure_callable.rs
src/hardware/platform/stm32l552/old_boot/: Cargo.toml  Makefile
src/hardware/platform/stm32l552/old_boot/src/: main.rs
src/kernel/: Cargo.toml
src/kernel/.cargo/: config.toml
src/kernel/key_storage_server/: Cargo.toml
src/kernel/linker/: umbra.ld
src/kernel/memory_protection_server/: Cargo.toml
src/kernel/memory_protection_server/src/: cpu_guard.rs  lib.rs  (+1 more)
src/kernel/memory_validation_server/: Cargo.toml
src/kernel/peripheral_protection_server/: Cargo.toml
src/kernel/src/: lib.rs  umbra_nsc_api.rs  user_api.rs
src/memseclib/: Cargo.toml
src/memseclib/src/: flash.rs  lib.rs
src/platform_drivers/stm32l552/: Cargo.toml
src/secboot/: Cargo.toml
src/secboot/src/: lib.rs
src/umbra/: Cargo.toml  Makefile  hexdump
src/umbra/.cargo/: config.toml
src/umbra/src/: main.rs  non_secure_callable.rs  startup.rs
(+12 files in other folders)
