[package]
name = "umbra"
version = "0.1.0"
edition = "2021"

[dependencies]
arm = { path = "../architecture_drivers/arm" }
stm32l552 = { path = "../platform_drivers/stm32l552" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations