[package]
name = "boot"
version = "0.1.0"
edition = "2021"

[dependencies]
arm = { path = "../../../architecture/arm" }
drivers = { path = "../drivers" }
kernel = { path = "../../../../kernel"}

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations